# Gogaku

./: README.md  app.py  app_gemini.py  app_jp.py  language_codes.json  pyproject.toml  sample.py  settings.json  setup_langcode.py  table_lang.json
mentorina-backend/: authenticate_mentorina.py  db_mentorina.py  dependencies.py  google_mentorina.py  main.py  schemas_mentorina.py  setup_nlp.py  vocabulary.py
mentorina-backend/data/: language_codes.json  setup_table_lang.py  table_lang.json  ui_lang.json
mentorina-frontend/pages/: dashboard.tsx  language-settings.tsx  login.tsx  signup.tsx  system-settings.tsx
mentorina-frontend/pages/learn/: WordSelector.module.css  WordSelector.tsx  demo.tsx  index.tsx
mentorina-frontend/src/types/: index.ts
mentorina-frontend/src/utils/: api.ts
notebooks/: test_gemma.ipynb
src/gogaku/: tts.py  vocab_manager.py  vocab_manager_gemini.py  vocab_manager_jp.py
src/gogaku.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gogaku/gemma_handler/: lm_studio.py
src/gogaku/gogaku.egg-info/: SOURCES.txt  top_level.txt
src/gogaku/streamlit/: language_setting.py  language_setting_gemini.py  main_page.py  main_page_beta.py  main_page_gemini.py  setup.py  system_setting_gemini.py
src/gogaku/vocab_manager/: vocab_manager.py  vocab_manager_gemini.py  vocab_manager_gemma.py
vocab_data/: british_english.csv  cantonese.csv  chinese.csv  english.csv  italian.csv  japanese.csv
