[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogaku"
version = "0.1"
dependencies = [
  "numpy",
  "streamlit",
  "google-genai",
  "google-cloud-texttospeech",
  "pycountry",
  "SudachiPy",
  "sudachidict_core",
  "pynlpir",
  "chinese",
  "spacy",
  "wordfreq"
]

[tool.setuptools.packages.find]
where = ["src"]
